--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,10 @@
     overflow-y: auto;
 }
 
-/* .content{
-    max-width: 960px;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-content: center;
-} */
-
 /* WHY DO BOTH LI AND UL NEED THIS RULE FROM THE LIST 
 DECORATION TO DISAPPEAR? THIS WAS PREVIOUSLY WORKING 
 WITH JUST LI */
+
 li{
     list-style-type: none;
 }
@@ -24,96 +18,103 @@ ul{
 
 a{
     text-decoration: none;
-    color: #363535;
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 button{
     border-radius: 10px;
+    background-color: #3882F6;
+    color: white;
+    height: 35px;
+    width: 100px;
+}
+
+button:hover{
+    cursor:pointer;
 }
 
 header{
-    background-color: rgb(5, 5, 59);
-    color: #615959;
+    background-color: #1F2937;
     display: flex;
-    /* margin-right: 15px;
-    margin-left: 15px; */
     justify-content: space-between;
     flex-direction: row;
+    padding: 20px;
 }
 
 .left-links{
     display: flex;
     justify-content: flex-start;
-    color: antiquewhite;
-    /* align-items: flex-start; */
+    color: #F9FAF8;
+    font-size: 24px;
 }
 
 .right-links{
-    /* justify-content: space-between; */
-    /* flex-direction: column;  */
     display: flex; 
     justify-content: flex-end;
-    /* align-items:; */
-    gap: 5px;
+    gap: 15px;
+    padding-right: 15px;
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 body{
-    /* height: 100%; */
     margin: 0; 
     overflow: hidden;
     font-family: Roboto, sans-serif;
-    /* border-color: red; */
-    /* border: 5px; */
     display: flex;
     flex-direction: column;
 }
-
-/* div{ 
-    /* DOES NOT SEEM TO AFFECT ANYTHING  
-    width: 100%;
-    height: 50vh;
-} */
 
 /* div 1 css */
 
 #div1{
     padding-top: 20px;
-    background-color: rgb(5, 5, 59);
+    background-color: #1F2937;;
     display: flex;
     height: 50vh;
-    color: antiquewhite;
-    /* justify-content: center; */
+    color: #F9FAF8;
+    justify-content: space-evenly;
 }
 
 .divone{
     display: flex;
     flex-direction: column;
     padding: 15px;
-
+    width: 500px;
 }
 
-.divone p {
+.divone p{
     padding: 10px;
 }
 
-/* div1.img{
-    HOW DO YOU CHAIN AN ID AND A SELECTOR 
-    padding-bottom: 20px;
-} */
+.divone h1{
+    font-weight: 900;
+    font-size: 48px;
+}
 
 /* div 2 css */
 
 #div2{
-    background-color: whitesmoke;
-    height: 50vh;
+    background-color: white;
+    color: #1F2937;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+#div2 h2{
+    padding-top: 10px;
+    font-size: 36px;
+    font-weight: 900;
+}
+
 .divtwo{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    padding-top: 25px;
 }
 
 .tmp{
@@ -122,10 +123,16 @@ body{
     padding: 15px;
 }
 
+.tmp img{
+    height: 200px;
+    width: auto;
+    border-radius: 10px;
+}
+
 /* div 3 css */
 
 #div3 {
-    background-color: #363535;
+    background-color: #E5E7EB;
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -133,21 +140,24 @@ body{
     align-items: center;
 }
 
+#div3 q{
+    font-size: 36px;
+    font-weight: light;
+    color: #1F2937;
+}
+
 .divthree{
     max-width: 600px;
 }
 
 .author{
-    /* display: flex;
-    justify-content: flex-end; */
-    /* align-items: flex-end; */
     padding-left: 300px;
 }
 
 /* div 4 css */
 
 #div4 {
-    background-color: #615959;
+    background-color: white;
     height: 50vh;
     display: flex;
     justify-content: center;
@@ -155,7 +165,7 @@ body{
 }
 
 .divfour{
-    background-color: rgb(5, 5, 59);
+    background-color: #3882F6;
     border-radius: 10px;
     color: aliceblue;
     width: 800px;
@@ -171,4 +181,13 @@ body{
 
 .divfour button{
     align-self: center;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    height: 15vh;
 }
